--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "gradlew": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-haptic-feedback": "^2.2.0"
